# indi-skypointer

./: .gitignore  AUTHORS  CMakeLists.txt  README  README.md  config.h.cmake  indi_skypointer.xml.cmake  skypointer.cpp  skypointer.h  skypointer_driver.cpp  skypointer_driver.h
